# cos-470-sistemas-distribuidos-tp3

./: Cargo.toml  parse_data.py  test.py  test.sh  validator.py
server/: Cargo.toml
server/src/: main.rs
src/: request.rs
src/client/: client.rs
src/coordinator/: channel.rs  coordinator.rs  entrypoint.rs  server.rs
